# tabit

./: .gitignore  CLAUDE.md  skills-lock.json
.claude/skills/night-shift-manager/: SKILL.md
.claude/skills/voicevault-contributor/: SKILL.md
.lavish/: voice-vault-plan.html
voice-vault/: .gitignore  README.md  WORKING.md  config.example.toml  pyproject.toml
voice-vault/config/: dictionary.md  feedback.md  synthesis-guide.md  tags.md  taxonomy.md
voice-vault/config/examples/: OAuth 2.0.md
voice-vault/tests/: test_annotation.py  test_claude_code_backend.py  test_cost_management.py  test_linking.py  test_ollama_backend.py  test_resynth.py  test_skills.py  test_watch.py
voice-vault/voicevault/: __init__.py  __main__.py  backends.py  config.py  dictionary.py  feedback.py  ledger.py  linking.py  run.py  skills.py  synthesize.py  taxonomy.py  transcribe.py  vault_context.py  watch.py
